# data-quality

./: 404.html  README.md  d.bat  funcionarios.db  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  r.bat  search.html
docs/: index.md  p2-backend.md
p2-backend/: index.html
p3-frontend/: index.html
p4-test/: index.html
search/: search_index.json
src/: database.py
test/: test_app.py
