[tool.poetry]
name = "dev-quality-data"
version = "0.1.0"
description = ""
authors = ["Hertz Lins <hertzw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.37.1"
black = "^24.8.0"
isort = "^5.13.2"
pydocstyle = "^6.3.0"
mkdocs = "^1.6.0"
pip-audit = "^2.7.3"
pre-commit = "^3.8.0"
taskipy = "^1.13.0"
selenium = "^4.23.1"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
format = "black . && isort ."
check = "pydocstyle && pip-audit"